# nexus-sql

./: .gitignore  Dockerfile  pyproject.toml  schema.sql
app/: .env.example  main.py  settings.py
app/controllers/: dashboard_controller.py  import_task_controller.py  institutions_controller.py  researchers_controller.py  works_controller.py
app/db/: db.py  models.py
app/dtos/: institutions.py  researchers.py  works.py
app/external_services/: openalex_service.py
app/models/: __init__.py  institutions.py  researchers.py  visualizations.py  works.py
app/scheduled/: scheduler.py
app/services/: dashboard_service.py  dblp_dataprocess_service.py  duplicate_detection_service.py  duplicate_elimination_service.py  institutions_service.py  merge_service.py  openalex_dataprocess_service.py  researchers_service.py  visualization_service.py  works_service.py
app/utils/: api_utils.py  db_utils.py  pandas_utils.py  visualization_helpers.py  visualization_utils.py
app/visualizations/: institution.py  mixed.py  researcher.py  work.py
