[project]
name = "nexus-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodataloader>=0.4.3",
    "aiohttp>=3.13.5",
    "aiohttp-client-cache>=0.14.3",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "asyncpg>=0.29.0",
    "brotli>=1.2.0",
    "fastapi>=0.136.1",
    "geoalchemy2>=0.15.0",
    "importlib-resources>=7.1.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "openalex-api",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.13.3",
    "pydantic-core>=2.46.3",
    "pydantic-settings>=2.14.0",
    "pydash>=8.0.6",
    "pytz>=2026.1.post1",
    "pyyaml>=6.0.3",
    "shapely>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "starlette>=1.0.0",
    "uvicorn>=0.46.0",
]

[tool.uv.sources]
openalex-api = { git = "https://github.com/Mearman/openalex-python.git", rev = "352860dfc7c6cc2ff7369a6bce1bbbc5cdbf92aa" }
